--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             s0.parentNode.insertBefore(s1, s0);
         })();
     </script>
-    <!--Start of Tawk.to Script-->
+    <!-- Start of Tawk.to Script-->
 <!-- <script type="text/javascript">
     var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
     (function(){
@@ -25,7 +25,7 @@
     s0.parentNode.insertBefore(s1,s0);
     })();
     </script> -->
-    <!--End of Tawk.to Script-->
+    <!--End of Tawk.to Script -->
     <!-- meta tag -->
     <meta charset="utf-8">
     <title>DEVOZY-Next Gen... Devops</title>
@@ -119,16 +119,16 @@
                             </div>
                             <div class="cell-col">
                                 <div class="rs-menu-area">
-                                    <div class="main-menu Faustina">
+                                    <div class="main-menu">
                                         <nav class="rs-menu">
                                             <ul id="onepage-menu" class="nav-menu">
-                                                <li> <a href="#rs-header">Home</a></li>
-                                                <li> <a href="#rs-Challenges">Challenges</a></li>
-                                                <li><a href="#rs-Advantages">Advantages</a></li>
-                                                <li><a href="#rs-Principles">Principles</a></li>
-                                                <li><a href="#rs-Technologies">Technologies</a></li>
-                                                <li><a href="#rs-Features">Features</a></li>
-                                                <li><a href="#rs-footer">Contact</a></li>
+                                                <li> <a href="#rs-header">HOME</a></li>
+                                                <li> <a href="#rs-Challenges">CHALLENGES</a></li>
+                                                <li><a href="#rs-Advantages">ADVANTAGES</a></li>
+                                                <li><a href="#rs-Principles">PRINCIPLES</a></li>
+                                                <li><a href="#rs-Technologies">TECHNOLOGIES</a></li>
+                                                <li><a href="#rs-Features">FEATURES</a></li>
+                                                <li><a href="#rs-footer">CONTACT</a></li>
                                             </ul> <!-- //.nav-menu -->
                                         </nav>
                                     </div> <!-- //.main-menu -->
