--- a/index.html
+++ b/index.html
@@ -2821,7 +2821,7 @@
                     Pricing
                 </h2>
                 <h5>
-                    choose which you
+                    choose what you prefer
                 </h5>
                 <div class="heading-line">
 
