--- a/index.html
+++ b/index.html
@@ -1473,7 +1473,7 @@
                         <a><i class="fa fa-shield"></i></a>
                         <h3 class="title "><a>Secure , Scale and Reliable </a></h3>
                         <p class="">
-                            Making systems work correctly, protect and strategies for keeping performance good
+                            By automating your infrastructure, Devozy helps to achieve scalability, security & reliability 
                         </p>
                     </div>
                 </div>
