--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="col-lg-2">
                                     <div class="logo-part">
 
-                                        <a href="index.html"><img src="img/yozy.png" alt="logo" width="100px"></a>
+                                        <a href="https://www.yozytech.com"><img src="img/yozy.png" alt="logo" width="100px"></a>
                                     </div>
                                 </div>
                                 <div class="col-lg-10 text-right">
