--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <i class="flaticon-call"></i>
                                             <span class="contact-info">
                                                 <span>Phone</span>
-                                                <a href="tel:0431-2964305"> 0431-2964305</a>
+                                                <a href="tel:+914312964305"> +91-431-2964305</a>
                                             </span>
                                             </span>
                                         </li>
@@ -4082,7 +4082,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <li>
                                 <i class="flaticon-call"></i>
                                 <div class="desc">
-                                    <a href="tel:0431-2964305">0431-2964305</a>
+                                    <a href="tel:+914312964305">+91-431-2964305</a>
                                 </div>
                             </li>
                             <li>
