--- a/index.html
+++ b/index.html
@@ -2140,7 +2140,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                 </div>
-                <div class="project-item">
+                <!-- <div class="project-item">
                     <div class="project-img">
                         <a><img src="assets/images/DeV-Screenshots/1.2.Integration Dashboard.png" alt="images"></a>
                     </div>
@@ -2154,7 +2154,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="project-item">
                     <div class="project-img">
                         <a><img src="assets/images/DeV-Screenshots/1.3.Recent Activities.png" alt="images"></a>
@@ -2170,7 +2170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                 </div>
-                <div class="project-item">
+                <!-- <div class="project-item">
                     <div class="project-img">
                         <a><img src="assets/images/DeV-Screenshots/1.All Dashboard.png" alt="images"></a>
                     </div>
@@ -2184,7 +2184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="project-item">
                     <div class="project-img">
                         <a><img src="assets/images/DeV-Screenshots/2.1.Server Details.png" alt="images"></a>
@@ -2245,7 +2245,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         </div>
                     </div>
                 </div>
-                <div class="project-item">
+                <!-- <div class="project-item">
                     <div class="project-img">
                         <a><img src="assets/images/DeV-Screenshots/2.Project Features.png" alt="images"></a>
                     </div>
@@ -2259,7 +2259,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
