--- a/index.html
+++ b/index.html
@@ -4033,8 +4033,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     src="assets/images/DEVOZY.png" alt=""></a>
                         </div>
                         <div class="textwidget pb-30">
-                            <p>We specialize in creative, sustainable technology driven solutions, services and
-                                products
+                            <p>An IT Service provider to provide friendly & cost effective enterprise solutions specialized on Cloud & DevOps Solutions
                             </p>
                         </div>
                         <ul class="footer-social md-mb-30">
