--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <!--End of Tawk.to Script -->
     <!-- meta tag -->
     <meta charset="utf-8">
-    <title>DEVOZY-Next Gen... Devops</title>
-    <meta name="description" content="">
+    <title>Devozy | Enterprise DevOps Platform</title>
+    <meta name="description" content="Devozy - Enterprise DevOps platform that empowers the enterprise to accelerate the overall return on software development through faster software delivery!">
     <!-- responsive tag -->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
