--- a/index.html
+++ b/index.html
@@ -2154,12 +2154,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 data-md-device-nav="true" data-md-device-dots="false">
                 <div class="project-item">
                     <div class="project-img">
-                        <a><img src="assets/images/DeV-Screenshots/1.1.MainDash.png" alt="images" class=""></a>
+                        <a><img src="assets/images/DeV-Screenshots/1.1.MainDash.webp" alt="images" class=""></a>
                     </div>
                     <div class="project-content ">
                         <div class="vertical-middle">
                             <div class="vertical-middle-cell">
-                                <h3 class="title"><a href="#assets/images/DeV-Screenshots/1.1.Main Dash.png">Main
+                                <h3 class="title"><a href="#assets/images/DeV-Screenshots/1.1.MainDash.webp">Main
                                         Dashboard</a></h3>
                                 <span class="category"><a href="#slider2" onclick=myFunction2()>click to
                                         preview</a></span>
@@ -2184,7 +2184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div> -->
                 <div class="project-item">
                     <div class="project-img">
-                        <a><img src="assets/images/DeV-Screenshots/1.3.Recent Activities.png" alt="images"></a>
+                        <a><img src="assets/images/DeV-Screenshots/1.3.Recent-Activities.webp" alt="images"></a>
                     </div>
                     <div class="project-content ">
                         <div class="vertical-middle">
@@ -2325,7 +2325,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <!-- <i class="fas fa-close"></i> -->
                         <h3> <i class="fa fa-close d-flex justify-content-end text-danger" title="close preview"
                                 onclick=myFunctionclose()></i></h3>
-                        <a><img src="assets/images/DeV-Screenshots/1.1.MainDash.png" alt="images" width=" 800px"
+                        <a><img src="assets/images/DeV-Screenshots/1.1.MainDash.webp" alt="images" width=" 800px"
                                 height="600px"></a>
                     </div>
 
@@ -2421,7 +2421,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                         <h3> <i class="fa fa-close d-flex justify-content-end text-danger" title="close preview"
                                 onclick=myFunctionclose()></i></h3>
-                        <a><img src="assets/images/DeV-Screenshots/1.3.Recent Activities.png" alt="images"></a>
+                        <a><img src="assets/images/DeV-Screenshots/1.3.Recent-Activities.webp" alt="images"></a>
                     </div>
                     <!-- <div class="project-content ">
                         <div class="vertical-middle">
