Added Mobile content in Banner

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!--End of Tawk.to Script -->
     <!-- meta tag -->
     <meta charset="utf-8">
-    <title>DEVOZY-Next Gen... Devops</title>
+    <title>DEVOZY-Next Gen... DevSecOps</title>
     <meta name="description" content="">
     <!-- responsive tag -->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -356,13 +356,20 @@
 
                                 </div> -->
                             <br>
-                            <h3 class="wow fadeinup text-dark ml-5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DevOps
+                            <h3 class="wow fadeinup text-dark mb-1 ml-5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DevSecOps
                                 Accelerator Platform</h3>
                             <P class="title-small-gen1 wow mb-40 fadeinup d-flex justify-content-center text-dark">
-                                DevOps,
+                                DevSecOps,
                                 the way forward</P>
-                            <ul class="banner-btn">
-                                <!-- <li><a class="readon started" href="about.html">Get Started</a></li> -->
+                                <P class="title-small-gen1 wow mb-10 fadeinup d-flex justify-content-center text-dark">
+
+                                Another milestone from us – Mobile DevSecOps. 
+                                </P>
+
+                            <ul class="banner-btn text-center">
+                               
+                                <!-- started -->
+                                <li><a class="readon  learn-more " href="#rs-testimonial">Know more</a></li>
                                 <li>
                                     <!-- <div class="rs-videos">
                                         <div class="animate-border">
@@ -487,15 +494,15 @@
                 </div>
                 <div class="services-desc">
                     <p>
-                        In digital era, any new application development needs a proper DEVOPS system to
+                        In digital era, any new application development needs a proper DevSecOps system to
                         deploy/ship
                         the software weekly, daily or multiple times a day. But it takes time to setup a
                         proper
-                        DEVOPS system and need expertise. There are many tools available in the market and
+                        DevSecOps system and need expertise. There are many tools available in the market and
                         selection
                         of tools is a challenge in this case. Hence the Project team end up building &
                         maintaining a
-                        DEVOPS system rather than focusing the actual development
+                        DevSecOps system rather than focusing the actual development
                     </p>
                 </div>
                 <div class="row align-items-center">
@@ -513,7 +520,7 @@
                             <div class="sec-title5 mb-20">
                                 <!-- <h2 class="title title2 pb-17">Brand Positioning</h2> -->
                                 <p class="desc2"> Typical challenges Enterprises faces, while building a
-                                    DEVOPS
+                                    DevSecOps
                                     system:</p>
                             </div>
                             <ul class="check-square">
@@ -521,9 +528,9 @@
                                 <li>Lack of knowledge to integrate tools</li>
                                 <li>Build and Manage the Continues integration environments & CICD pipeline
                                 </li>
-                                <li>Demands specialized team of DEVOPS engineers</li>
+                                <li>Demands specialized team of DevSecOps engineers</li>
                                 <li>Duplicate environments and lack of re-usability</li>
-                                <li>Dependency with Deployment team for managing the DEVOPS system</li>
+                                <li>Dependency with Deployment team for managing the DevSecOps system</li>
                                 <li>Increase in project cost in turn affects ROI</li>
                                 <li>Turnaround time to spin-up a new test environment</li>
                                 <li>Multiple admin console & login accounts</li>
@@ -559,8 +566,8 @@
                 </div>
                 <!-- <span style='font-size:7px;'>&#9899;</span>&nbsp; -->
                 <div class="desc-part pt-30 text-purple">
-                    Devozy (DevOps Accelerator Platform) delivers a more efficient and agile release capability within
-                    weeks – delivering a production grade cloud-based developer platform that integrates DevOps tooling,
+                    Devozy (DevSecOps Accelerator Platform) delivers a more efficient and agile release capability within
+                    weeks – delivering a production grade cloud-based developer platform that integrates DevSecOps tooling,
                     processes and automation to improve release cycle times and development efficiency.
                 </div>
                 <!-- <div class="animation-layer">
@@ -575,7 +582,7 @@
                         <img src="assets/images/shape.png" alt="Images">
                     </div> -->
                             <!-- <div class="desc-part pt-30">
-                        <span style='font-size:7px;'>&#9899;</span>&nbsp;Devozy (DevOps Accelerator Platform) delivers a more efficient and agile release capability within weeks – delivering a production grade cloud-based developer platform that integrates DevOps tooling, processes and automation to improve release cycle times and development efficiency.
+                        <span style='font-size:7px;'>&#9899;</span>&nbsp;Devozy (DevSecOps Accelerator Platform) delivers a more efficient and agile release capability within weeks – delivering a production grade cloud-based developer platform that integrates DevSecOps tooling, processes and automation to improve release cycle times and development efficiency.
                     </div> -->
                             <div class="desc-part pt-30 text-justify">
                                 <span style='font-size:7px;'>&#9899;</span>&nbsp;Devozy is a best-of-breed, flexible,
@@ -586,11 +593,11 @@
                                 solution for your Enterprise - without months of overhead & investment.
                             </div>
                             <div class="desc-part pt-30 text-justify">
-                                <span style='font-size:7px;'>&#9899;</span>&nbsp;Devozy DevOps Accelerator is designed
-                                to help organizations get started with DevOps and generate immediate wins. By working
+                                <span style='font-size:7px;'>&#9899;</span>&nbsp;Devozy DevSecOps Accelerator is designed
+                                to help organizations get started with DevSecOps and generate immediate wins. By working
                                 with your existing development teams to identify the existing build & deployment
                                 process, technology, or organization gaps, we can help transform your existing projects
-                                into our DevOps Platform within few weeks. Leveraging our broad knowledge of
+                                into our DevSecOps Platform within few weeks. Leveraging our broad knowledge of
                                 technologies for continuous integration, continuous deployment, and telemetry, our
                                 experienced consultants will work with your team to leverage in-place or new tools to
                                 take an application or product to a state of continuous deployment.
@@ -684,7 +691,7 @@
 
                                 </a></h3>
                             <p class="services-desc">
-                                Application deployment with pre-built pipelines (DEVOPS as a
+                                Application deployment with pre-built pipelines (DevSecOps as a
                                 Service) via centrally managed web console (10x time faster than conventional
                                 model)
                             </p>
@@ -761,7 +768,7 @@
                             </div>
                             <div class="services-desc">
                                 <p>
-                                    Application deployment with pre-built pipelines (DEVOPS as a
+                                    Application deployment with pre-built pipelines (DevSecOps as a
                                     Service) via centrally managed web console (10x time faster than
                                     conventional model)
                                 </p>
@@ -870,11 +877,11 @@
                         </div>
                         <div class="services-content">
                             <div class="services-text Faustina">
-                                <h3 class="title"><a>Deskill DEVOPS & CICD Configuration</a></h3>
+                                <h3 class="title"><a>Deskill DevSecOps & CICD Configuration</a></h3>
                             </div>
                             <div class="services-desc">
                                 <p>
-                                    Remove the need of DEVOPS expert
+                                    Remove the need of DevSecOps expert
                                 </p>
                             </div>
 
@@ -949,7 +956,7 @@
                             <div class="services-title">
                                 <h3 class="title">Jump start and accelerate</h3>
                             </div>
-                            <p class="services-txt"> Application deployment with pre-built pipelines (DEVOPS as a
+                            <p class="services-txt"> Application deployment with pre-built pipelines (DevSecOps as a
                                 Service) via centrally managed web console (10x time faster than conventional model)</p>
                         </div>
                     </div>
@@ -1020,9 +1027,9 @@
                         </div>
                         <div class="services-content">
                             <div class="services-title">
-                                <h3 class="title">Deskill DEVOPS & CICD Configuration</h3>
+                                <h3 class="title">Deskill DevSecOps & CICD Configuration</h3>
                             </div>
-                            <p class="services-txt">Remove the need of DEVOPS expert
+                            <p class="services-txt">Remove the need of DevSecOps expert
                         </div>
                     </div>
                 </div>
@@ -1048,7 +1055,7 @@
             <div class="sec-title2 text-center Faustina mb-45">
                 <!-- <span class="sub-text">Services</span> -->
                 <h2 class="title testi-title">
-                    Mobile DevOps
+                    Mobile DevSecOps
                 </h2>
                
                 <div class="heading-line">
@@ -1057,11 +1064,11 @@
             <div class="testi-effects-layer bg10">
                 <div class="row align-items-center">
                     <div class="col-lg-7">
-                        <div class="sec-title mb-60">
+                        <div class="sec-title mb-60" id="main">
                             <!-- <div class=" title new"></div> -->
-                            <h2 class="title title4 white-color text-left   pb-20" id="paraimag">
-                              Automated pipeline with continuous deployment, results in instant reports and feedbacks in your hands
-                            </h2>
+                            <h3 class="title title4 white-color text-left   pb-30" id="paraimag">
+                                What is the main benefit of DevSecOps in Enterprises?</h3>
+                               <p class="title title4 white-color text-left " id="paraimag2"> Secured platform to track, schedule deployment & get instant results of pipeline status, CI/CD deployment, project / environment dashboards on your fingertips </p>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -1078,7 +1085,7 @@
                                 <div class="testi-item">
 
 
-                                    <img src="assets/images/devops mobile screen/dashboard.png" alt="">
+                                    <img src="assets/images/DevSecOps mobile screen/dashboard.png" alt="">
 
 
 
@@ -1087,7 +1094,7 @@
                                 <div class="testi-item">
 
 
-                                    <img src="assets/images/devops mobile screen/dashboard1.png" alt="">
+                                    <img src="assets/images/DevSecOps mobile screen/dashboard1.png" alt="">
 
 
 
@@ -1096,7 +1103,7 @@
                                 <div class="testi-item">
 
 
-                                    <img src="assets/images/devops mobile screen/Application.png" alt="">
+                                    <img src="assets/images/DevSecOps mobile screen/Application.png" alt="">
 
 
 
@@ -1105,7 +1112,7 @@
                                 <div class="testi-item">
 
 
-                                    <img src="assets/images/devops mobile screen/Appstage.png" alt="">
+                                    <img src="assets/images/DevSecOps mobile screen/Appstage.png" alt="">
 
 
 
@@ -1114,7 +1121,7 @@
                                 <div class="testi-item">
 
 
-                                    <img src="assets/images/devops mobile screen/Deploy.png" alt="">
+                                    <img src="assets/images/DevSecOps mobile screen/Deploy.png" alt="">
 
 
 
@@ -1125,7 +1132,7 @@
                                 <div class="testi-item">
 
 
-                                    <img src="assets/images/devops mobile screen/Login.png" alt="">
+                                    <img src="assets/images/DevSecOps mobile screen/Login.png" alt="">
 
 
 
@@ -1134,7 +1141,7 @@
                                 <div class="testi-item">
 
 
-                                    <img src="assets/images/devops mobile screen/Scheduledaily.png" alt="">
+                                    <img src="assets/images/DevSecOps mobile screen/Scheduledaily.png" alt="">
 
 
 
@@ -1143,7 +1150,7 @@
                                 <div class="testi-item">
 
 
-                                    <img src="assets/images/devops mobile screen/ScheduleWeekly.png" alt="">
+                                    <img src="assets/images/DevSecOps mobile screen/ScheduleWeekly.png" alt="">
 
 
 
@@ -1258,7 +1265,7 @@
                                 <p>
                                     Automation of Automation provide single gateway to perform application
                                     deployments
-                                    and manage DEVOPS tools .
+                                    and manage DevSecOps tools .
                                 </p>
                             </div>
                         </div>
@@ -1279,7 +1286,7 @@
                             <div class="services-desc">
                                 <p>
                                     Open-Source Tools
-                                    Built completely using open-source technologies and DEVOPS tools to automate
+                                    Built completely using open-source technologies and DevSecOps tools to automate
                                     end to
                                     end
                                 </p>
@@ -1303,7 +1310,7 @@
                             <div class="services-desc">
                                 <p>
                                     Technology Agnostic
-                                    provides support to multiple DEVOPS tools and technologies and
+                                    provides support to multiple DevSecOps tools and technologies and
                                     deployment options such as cloud native, server, Serverless, containers
                                 </p>
                             </div>
@@ -2175,17 +2182,17 @@
                 <tr>
                     <td>
                         <span>&#9899;</span>&nbsp;who wants to present in cloud to
-                        accelerate Devops operation.
-                        <br><span>&#9899;</span>&nbsp;who wants to automate Devops
+                        accelerate DevSecOps operation.
+                        <br><span>&#9899;</span>&nbsp;who wants to automate DevSecOps
                         build & deployment on few clicks.
-                        <br><span>&#9899;</span>&nbsp;Who wants to build devops
+                        <br><span>&#9899;</span>&nbsp;Who wants to build DevSecOps
                         culture.
-                        <br><span>&#9899;</span>&nbsp;Who wants to setup Devops
+                        <br><span>&#9899;</span>&nbsp;Who wants to setup DevSecOps
                         without in-house Team.
-                        <br><span>&#9899;</span>&nbsp;who wants to build DEVOPS ECO
+                        <br><span>&#9899;</span>&nbsp;who wants to build DevSecOps ECO
                         system in few weeks and up & running.
                         <br><span>&#9899;</span>&nbsp;who wants to avoid messy on
-                        setting up DEVOPS system.
+                        setting up DevSecOps system.
                         <br><span>&#9899;</span>&nbsp;Who wants to minimize
                         costs,increase efficiency and speed up the
                         release management cycle.
@@ -3745,7 +3752,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                    Need DEVOPS Engineer?
+                                    Need DevSecOps Engineer?
                                 </td>
                                 <td>
                                     Yes
@@ -3931,7 +3938,7 @@
                         <th class="black-t Livvictd">DEVOZY</th>
                     </tr>
                     <tr>
-                        <td class=""> Need DEVOPS Engineer?</td>
+                        <td class=""> Need DevSecOps Engineer?</td>
 
                         <td>
                             YES
@@ -4190,7 +4197,7 @@
                         </div>
                         <div class="textwidget pb-30">
                             <p>An IT Service provider to provide friendly & cost effective enterprise solutions
-                                specialized on Cloud & DevOps Solutions
+                                specialized on Cloud & DevSecOps Solutions
                             </p>
                         </div>
                         <ul class="footer-social md-mb-30">
@@ -4224,7 +4231,7 @@
                             <li><a>Software Development</a></li>
                             <li><a>Web Development</a></li>
                             <li><a>Analytic Solutions</a></li>
-                            <li><a>Cloud and DevOps</a></li>
+                            <li><a>Cloud and DevSecOps</a></li>
                             <li><a>Product Design</a></li>
                         </ul> -->
                     <!-- </div> -->
