--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <!--End of Tawk.to Script -->
     <!-- meta tag -->
     <meta charset="utf-8">
-    <title>DEVOZY-Next Gen... DevSecOps</title>
-    <meta name="description" content="">
+    <title>Devozy | Enterprise DevSecOps Accelerator Platform</title>
+    <meta name="description" content="Devozy - Enterprise DevSecOps platform that empowers enterprise to accelerate the overall return on software development through faster software delivery!">
     <!-- responsive tag -->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
