--- a/index.html
+++ b/index.html
@@ -116,21 +116,21 @@
 
 
                         </div>
-                        <div class="col-2 mr-auto">
+                        <div class="col-4 mr-auto">
                             <a class="subscribe " href="https://subscription.yozytech.com/signup"
-                                target="_blank">Subscribe</a>
+                                target="_blank">subscribe for free trial</a>
 
                         </div>
 
-                        <div class="col-8 ">
+                        <div class="col-6 ">
 
 
-                            <a href="tel:0431-2964305"> <i class="flaticon-call"></i></a> &nbsp;
-                            <a href="mailto:business@yozytech.com"><i class="flaticon-email"></i></a>&nbsp;
+                            <a href="tel:0431-2964305">  <i class="fa fa-phone" aria-hidden="true"></i></a> &nbsp;
+                            <a href="mailto:business@yozytech.com"> <i class="fa fa-envelope" aria-hidden="true"></i></a>&nbsp;
                             <a href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQHjFMnwrpdUuwAAAX64sLroYeI6r5Vfvj77B6W658xu9poeKT2f0SZDTO-2tDElMqX-w4VWfAhudGSEM7_nipukPmXMqU2J-5nuVwsfyWNIpkMu2L73MnAOoHjZ2jArSZLlfa0=&originalReferer=https://yozytech.com/&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fyozy-technologies-llp%2F"
                                 target="_blank"><span>
                                     <i class="fa fa-linkedin"></i></span></a>&nbsp;
-                            <a href="https://www.facebook.com/YozY-Technologies-LLP-108913821246594"
+                            <a href="https://www.facebook.com/devozy/"
                                 target="_blank"><span><i class="fa fa-facebook"></i></span></a>&nbsp;
 
                             <a href="https://twitter.com/yozytechnologi1" target="_blank"><span><i
@@ -150,7 +150,7 @@
                     <div class="topbar-area">
                         <div class="container">
                             <div class="row rs-vertical-middle">
-                                <div class="col-lg-2">
+                                <div class="col-lg-1">
                                     <div class="logo-part mt-3">
 
                                         <a href="index.html"><img src="img/yozy.png" alt="logo" width="120px"></a>
@@ -158,7 +158,7 @@
                                     </div>
                                 </div>
 
-                                <div class="col-lg-3">
+                                <div class="col-lg-4">
                                     <nav class="rs-menu ">
                                         <ul class="nav-menu">
 
@@ -170,7 +170,7 @@
                                             </li>
                                             <li>
                                                 <a class="subscribe" href="https://subscription.yozytech.com/signup"
-                                                    target="_blank">Subscribe</a>
+                                                    target="_blank">subscribe for free trial</a>
 
                                             </li>
 
@@ -184,7 +184,7 @@
                                     <ul class="rs-contact-info">
 
                                         <li class="contact-part">
-                                            <i class="flaticon-email"></i>
+                                            <i class="fa fa-envelope" aria-hidden="true"></i>
                                             <span class="contact-info">
                                                 <span>E-mail</span>
                                                 <span><a
@@ -192,7 +192,7 @@
                                                     </span>
                                         </li>
                                         <li class="contact-part">
-                                            <i class="flaticon-call"></i>
+                                            <i class="fa fa-phone" aria-hidden="true"></i>
                                             <span class="contact-info">
                                                 <span>Phone</span>
                                                 <span><a href="tel:0431-2964305">0431-2964305</a></span>
@@ -201,7 +201,7 @@
                                         </li>
                                         <li class="contact-part no-border">
 
-                                            <a href="https://www.facebook.com/YozY-Technologies-LLP-108913821246594"
+                                            <a href="https://www.facebook.com/devozy/"
                                                 target="_blank"><span><i class="fa fa-facebook"></i></span></a>
 
                                             <a href="https://twitter.com/yozytechnologi1" target="_blank"><span><i
@@ -2299,7 +2299,7 @@
                         </div>
                         <ul class="footer-social md-mb-30">
                             <li>
-                                <a href="https://www.facebook.com/YozY-Technologies-LLP-108913821246594"
+                                <a href="https://www.facebook.com/devozy/"
                                     target="_blank"><span><i class="fa fa-facebook"></i></span></a>
                             </li>
                             <li>
@@ -2317,9 +2317,11 @@
                                             class="fa fa-instagram"></i></span></a>
                             </li>
                             <a class="subscribe" href="https://subscription.yozytech.com/signup"
-                                target="_blank">Subscribe</a>
+                                target="_blank">subscribe for free trial</a>
+<li>
 
-
+</li>
+                               
                         </ul>
                     </div>
 
@@ -2350,6 +2352,17 @@
                                     Opening Hours: 10:00 - 18:00
                                 </div>
                             </li>
+                            <!-- <li>
+                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+
+                                <div class="desc">
+                                    <script src="//platform.linkedin.com/in.js" type="text/javascript">
+                                        lang: en_US
+                                      </script>
+                                      <script type="IN/FollowCompany" data-id="1830623" data-counter="right"></script>
+                                </div>
+                            </li> -->
+                           
                         </ul>
                     </div>
 
@@ -2379,7 +2392,7 @@
     <div id="scrollUp" class="purple-color">
         <div class="btn_wrap subscribe">
             <span class="span1"><a href="https://subscription.yozytech.com/signup" target="_blank"
-                    class="text-white">Subscribe </a></span>
+                    class="text-white">subscribe for free trial </a></span>
             <div class="">
 
             </div>
