Added Signin button
Added Signin button

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <meta charset="utf-8">
-    <title>DEVOZY-Next Gen... DevSecOps</title>
-    <meta name="description" content="">
+    <title>Devozy | Enterprise DevSecOps Accelerator Platform</title>
+    <meta name="description" content="Devozy - Enterprise DevSecOps platform that empowers enterprise to accelerate the overall return on software development through faster software delivery!">
     <!-- responsive tag -->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -116,30 +116,34 @@
 
 
                         </div>
-                        <div class="col-4 mr-auto">
+                        <div class="col-6 mr-auto">
+                         <a class="text-primary link-mobile" target="_blank" href="blog.html">Blog</a> 
+                        <a class="text-primary link-mobile" target="_blank" href="https://ydp.yozy.in/login">Sign in</a>
+
+                                            
                             <a class="subscribe " href="https://subscription.yozytech.com/signup"
                                 target="_blank">subscribe for free trial</a>
 
                         </div>
 
-                        <div class="col-6 ">
+                        <div class="col-4 sslinks">
 
 
                             <a href="tel:0431-2964305">  <i class="fa fa-phone" aria-hidden="true"></i></a> &nbsp;
                             <a href="mailto:business@yozytech.com"> <i class="fa fa-envelope" aria-hidden="true"></i></a>&nbsp;
                             <a href="https://www.linkedin.com/authwall?trk=gf&trkInfo=AQHjFMnwrpdUuwAAAX64sLroYeI6r5Vfvj77B6W658xu9poeKT2f0SZDTO-2tDElMqX-w4VWfAhudGSEM7_nipukPmXMqU2J-5nuVwsfyWNIpkMu2L73MnAOoHjZ2jArSZLlfa0=&originalReferer=https://yozytech.com/&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fyozy-technologies-llp%2F"
                                 target="_blank"><span>
-                                    <i class="fa fa-linkedin"></i></span></a>&nbsp;
-                            <a href="https://www.facebook.com/devozy/"
-                                target="_blank"><span><i class="fa fa-facebook"></i></span></a>&nbsp;
+                                    <i class="fa fa-linkedin"></i></span></a>
+                            <a class="hideinmob" href="https://www.facebook.com/devozy/"
+                                target="_blank"><span><i class="fa fa-facebook"></i></span></a>
 
-                            <a href="https://twitter.com/yozytechnologi1" target="_blank"><span><i
-                                        class="fa fa-twitter"></i></span></a>&nbsp;
+                            <a class="hideinmob" href="https://twitter.com/yozytechnologi1" target="_blank"><span><i
+                                        class="fa fa-twitter"></i></span></a>
 
                             <a href="https://www.instagram.com/platform_devozy/" target="_blank"><span><i
                                         class="fa fa-instagram"></i></span></a>
                             <a href="https://wa.me/919894039246" target="_blank"><i class="fa fa-whatsapp"></i></a>
-                            <a class="text-primary" target="_blank" href="blog.html">Blog</a>
+                            
 
 
                         </div>
@@ -165,7 +169,11 @@
 
 
                                             <li class="menu-item-has-children">
-                                                <a class="text-primary" target="_blank" href="blog.html">Blog</a>
+                                                <a class="text-primary link-mobile" target="_blank" href="blog.html">Blog</a>
+
+                                            </li>
+                                              <li class="menu-item-has-children">
+                                                <a class="text-primary link-mobile" target="_blank" href="https://ydp.yozy.in/login">Sign in</a>
 
                                             </li>
                                             <li>
