Devozy video added

--- a/index.html
+++ b/index.html
@@ -271,9 +271,16 @@
         <div class="rs-banner style3 modify2">
             <div class="container">
                 <div class="row align-items-end">
-                    <div class="col-lg-6 col-md-6 col-sm-12 col-12 order-last mybanner">
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-12 order-last align-self-start mybanner">
                         <div class="banner-img">
-                            <img src="assets/images/banner/banner-5.png" alt="">
+                            <!-- <img src="assets/images/banner/banner-5.png" alt=""> -->
+                             <iframe  class="myoutube "
+                width="550px"
+                height="350px"
+                    src="https://www.youtube.com/embed/Q_1ngqFkk7A"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-12 rsbanner">
@@ -389,12 +396,12 @@
 
     <!--  -->
 
-<div class="container">
+<!-- <div class="container">
 <div id="services" class="rs-services style3 bgProject mt-50 mb-50">
         <div class="d-flex align-items-center justify-content-center myviedo">
             <div class="">
                 <iframe  class="myoutube "
-                width="550px" height="315"
+                
                     src="https://www.youtube.com/embed/Q_1ngqFkk7A"
                     title="YouTube video player" frameborder="0"
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -404,7 +411,7 @@
           
         </div>
     </div>
-</div>
+</div> -->
   
 
 
