--- a/index.html
+++ b/index.html
@@ -962,7 +962,7 @@
                     <div class="row align-items-center">
                         <div class="col-lg-9 col-md-12 md-pr-0 pr-148 md-pl-15 md-mb-30 md-center">
                             <div class="title-wrap">
-                                <h2 class="epx-title"> Subscribe for free trail </h2>
+                                <h2 class="epx-title"> Subscribe for free trial </h2>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-12 text-righ">
@@ -1587,7 +1587,7 @@
                     <div class="project-img" onclick=myFunctionclose()>
                         <h3> <i class="fa fa-close d-flex justify-content-end text-danger" title="close preview"
                                 onclick=myFunctionclose()></i></h3>
-                        <a><img src="assets/images/DeV-Screenshots/1.2.Integration Dashboard.png" alt="images"></a>
+                        <!-- <a><img src="assets/images/DeV-Screenshots/1.2.Integration Dashboard.png" alt="images"></a> -->
                     </div>
 
                 </div>
@@ -1648,7 +1648,7 @@
                     <div class="project-img">
                         <h3> <i class="fa fa-close d-flex justify-content-end text-danger" title="close preview"
                                 onclick=myFunctionclose()></i></h3>
-                        <a><img src="assets/images/DeV-Screenshots/1.All Dashboard.png" alt="images"></a>
+                        <!-- <a><img src="assets/images/DeV-Screenshots/1.All Dashboard.png" alt="images"></a> -->
                     </div>
 
                 </div>
@@ -1812,7 +1812,7 @@
                     <div class="project-img">
                         <h3> <i class="fa fa-close d-flex justify-content-end text-danger" title="close preview"
                                 onclick=myFunctionclose()></i></h3>
-                        <a><img src="assets/images/DeV-Screenshots/2.Project Features.png" alt="images"></a>
+                        <!-- <a><img src="assets/images/DeV-Screenshots/1.1.MainDash.png" alt="images"></a> -->
                     </div>
 
                 </div>
@@ -2811,19 +2811,19 @@
         }
     })
 
-    function hourglass() {
-        var a;
-        a = document.getElementById("div1");
-        a.innerHTML = "&#xf251;";
-        setTimeout(function () {
-            a.innerHTML = "&#xf252;";
-        }, 1000);
-        setTimeout(function () {
-            a.innerHTML = "&#xf253;";
-        }, 2000);
-    }
-    hourglass();
-    setInterval(hourglass, 3000);
+    // function hourglass() {
+    //     var a;
+    //     a = document.getElementById("div1");
+    //     a.innerHTML = "&#xf251;";
+    //     setTimeout(function () {
+    //         a.innerHTML = "&#xf252;";
+    //     }, 1000);
+    //     setTimeout(function () {
+    //         a.innerHTML = "&#xf253;";
+    //     }, 2000);
+    // }
+    // hourglass();
+    // setInterval(hourglass, 3000);
 </script>
 
 </html>
