--- a/index.html
+++ b/index.html
@@ -302,24 +302,12 @@
 
                             <br>
                             <h3 class="wow fadeinup text-dark mb-1 ml-5">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DevSecOps
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;DevOps
                                 Accelerator Platform</h3>
-                            <P
-                                class="title-small-gen1 wow mb-40 md-mb-10 fadeinup d-flex justify-content-center text-dark">
-                                DevSecOps,
-                                the way forward</P>
                             <P class="title-small-gen1 wow mb-10 fadeinup d-flex justify-content-center text-dark">
-
-                                Another milestone from us - Introducing mobile app for DevSecOps
+                                Introducing mobile app . Game change and first ever in DevOps histroy. 
                             </P>
-                            
-                            <P class="title-small-gen1 wow mb-10 fadeinup d-flex justify-content-center text-dark">
- First time in the world.
-                            </P>
-
                             <ul class="banner-btn text-center">
-
-
                                 <li><a id="knowbtn" class="readon  learn-more " href="#rs-testimonial">Know more</a>
                                 </li>
                                 <li>
