--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                 Accelerator Platform</h3>
 
                             <P class="title-small-gen1 wow  fadeinup d-flex justify-content-center text-dark">
-                                Introducing mobile app . Game change and first ever in DevOps histroy. 
+                                Introducing mobile app . Game change and first ever in DevOps history. 
                             </P>
                             <!-- <h4 class="title-small-gen1 wow mb-1 fadeinup d-flex justify-content-center text-dark ">
                                 simple steps to build your project environment & CICD pipes</h4>
