--- a/index.html
+++ b/index.html
@@ -309,9 +309,14 @@
                             </ul> -->
                         </div>
                </div>
-               <div class="twosections d-flex mt-3 justify-content-center align-items-center ">
-                <div class="banner-img1 d-flex justify-content-center">
-                            <img src="assets/devozy-banner-3steps.png" alt="">
+               <div class="twosections d-flex mt-3 justify-content-center align-items-center mr-5 ">
+                <div class="banner-img1 d-flex justify-content-center flex-column">
+                    <h2>Loaded features, future Ready</h2>
+                            <ul>
+                                <li class="custom3"> <img src="./assets/cloud.png"  alt=""><strong>Step1: </strong>Add your cloud subscription (any cloud even Multi-cloud aws,azure,gcp).</li>
+                                <li class="custom3"> <img src="./assets/code.png"  alt=""><strong>Step2: </strong>Configure your code repo. (any repo github,Bitbucket).</li>
+                                <li class="custom3"> <img src="./assets/spped.png"  alt=""><strong>Step3: </strong>On-boarding - just giving few details about your project - tech stack, code branch etc.</li>
+                            </ul>
                   
                         </div>
                 <div class="banner-img bimg2 d-flex  justify-content-center2" >
